add wip quests tab with gilded bucket quest

--- a/css/main.css
+++ b/css/main.css
@@ -137,6 +137,11 @@ ul {
   margin-bottom: 1rem;
 }
 
+nav li small {
+  font-size: 0.6em;
+  margin-left: -2px;
+}
+
 /* 
 ul li ul {
   padding-top: 0;
